styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
/* .add1 {
  width: 100%;
  height: 200px;
  background-color: rgb(190, 190, 190);
} */
.monthly {
  padding: 10px 20px 0 20px;
}

.monthly-con {
  width: 100%;
  display: flex;
}

.monthly-content {
  width: 100%;
  /* height: 300px; */
  background-color: rgb(255, 255, 255);
}

.monthly-side-content {
  /* width: 100%; */
  height: 850px;
  display: flex;
  flex-direction: column;
  /* max-width: 350px; */
}

.monthly-side-content .side-data {
  /* width: 100%; */
  background-color: rgb(255, 255, 255);
  height: 650px;
  border-top: 1px solid rgb(204, 204, 204);
  border-bottom: 1px solid rgb(204, 204, 204);
  /* border: 1px solid black; */
  padding: 30px;
}

.monthly-side-head {
  padding: 10px 0 0 10px;
  font-size: 25px;
  font-weight: 700;
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
}
.monthly-side-content .side-data .table1 {
  width: 100%;
  padding-top: 10px;
  border-spacing: 25px 15px;
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
}
.monthly-side-content .side-data .table2 {
  width: 100%;
  border-spacing: 25px 15px;
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
}
.monthly-side-content .side-data .table3 {
  width: 100%;
  border-spacing: 25px 15px;
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
}

.monthly-side-head1 {
  padding: 15px 0 10px 10px;
  font-size: 17px;
  font-weight: 600;
  border-top: 1px solid rgb(204, 204, 204);
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
}

.monthly-content-head {
  font-size: 30px;
  font-weight: 600;
  padding: 25px 0 0 50px;
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
}

.monthly-content-head span {
  font-size: 20px;
  font-weight: 500;
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
}
.monthly .part1 {
  /* width: 100%; */
  display: flex;
  justify-content: space-between;
  margin: 20px 40px 0 40px;
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
}

.monthly .part1 .section1 {
  align-self: anchor-center;
}
.monthly .part1 .section1 button {
  background-color: white;
}
.monthly .part1 .section2 {
  display: flex;
  gap: 15px;
}

.monthly .part1 .section3 {
  align-self: anchor-center;
}

.monthly .part1 .section3 button {
  background-color: white;
  border: none;
}

.monthly .part2 {
  width: 100%;
}

.monthly .part2 .days {
  width: 90%;
  margin: 15px auto 0 auto;
  display: flex;
  justify-content: space-around;
  /* border-bottom: 1px solid; */
  border-top: 1px solid rgb(212, 212, 212);
  padding: 8px;
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
  color: rgb(155, 155, 155);
}

.monthly .part2 .cards {
  width: 100%;
}
.monthly .part2 .cards .container1 {
  width: 100%;
  max-width: 1000px;
  margin: 2px auto;
  display: grid;
  grid-template-columns: repeat(7, 1fr);
}

.monthly .part2 .cards .card {
  /* width: 100%; */
  display: flex;
  flex-direction: column;
  border: 1px solid rgb(230, 229, 229);
  position: relative;
}

.info {
  align-self: center;
  padding: 4px;
}

.num {
  color: rgb(155, 155, 155);
}

.dg {
  color: rgb(95, 90, 90);
  font-size: 22px;
}
.dg1 {
  color: gray;
}
.day {
  color: rgb(65, 65, 65);
}

.active {
  border: 2px solid blue;
}

/* card */

.monthly-card1 {
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
  display: flex;
  width: 100%;
  gap: 20px;
  max-width: 1000px;
  margin: 0 auto;
}
.monthly-card2 {
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
  display: flex;
  width: 100%;
  gap: 20px;
  max-width: 1000px;
  margin: 0 auto;
}

.monthly-card1 .c1,
.monthly-card2 .c2 {
  font-size: 22px;
  font-weight: 700;
  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
  cursor: pointer;
}

.mcard1 {
  width: 100%;
  padding: 10px;
}

.ncard {
  background-color: rgb(226, 225, 225);
  display: grid;
  grid-template-columns: 1fr 1fr;
  padding: 15px;
  border-radius: 15px;
}

.hide {
  display: none;
}

@media (max-width: 760px) {
  .monthly-con {
    width: 100%;
    display: flex;
    flex-direction: column;
  }
}

* {
  padding: 0;
  margin: 0;
  font-family: Inter, "Inter Fallback: Arial", "Inter Fallback: Roboto", Arial,
    Roboto, sans-serif;
}
.radar {
  display: flex;
}
.radar .main {
  flex: 1;
}
.radar .main-container {
  display: flex;
}
.radar .map {
  display: flex;
  flex-direction: column;
  flex: 1;
  position: relative;
}
.radar #map {
  height: 82vh;
}
.radar .weather-list {
  display: flex;
  justify-content: space-between;
  padding: 6px 15px;
  width: 569.94px;
  margin: 0 auto;
}
.radar .weather {
  display: flex;
  align-items: center;
  flex: 1;
  margin: 0 15px 0px 0px;
}
.radar .weather img {
  margin: 0px 8px 0px 0px;
}
.radar .weather span {
  margin: 0px 8px 0px 0px;
  white-space: nowrap;
  font-size: 13px;
}
.radar .map-head p {
  color: #6f7585;
  padding: 6px 0px 0px;
  text-align: center;
  font-size: 14px;
}
.radar .rain {
  width: 64px;
  height: 10px;
}
.radar .freezing-rain {
  width: 64px;
  height: 10px;
}
.radar .mix {
  width: 64px;
  height: 10px;
}
.radar .snow {
  width: 64px;
  height: 10px;
}
.leaflet-touch .leaflet-bar {
  border: none;
  background-clip: padding-box;
}
.leaflet-touch .leaflet-bar a:first-child {
  border-radius: 25px 25px 0 0;
}
.leaflet-touch .leaflet-bar a:last-child {
  border-radius: 0 0 25px 25px;
}
/* ... */

